Perkin-UAT/force-app/main/default/objects/Lead_Interest_Track__c/Lead_Interest_Track__c.object-meta.xml
<CustomObject>
    <description>Tracking the Lead Interest Fields Change</description>
    <label>Lead Interest Tack</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Lead Interest History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Interest Track</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>