Perkin-UAT/force-app/main/default/objects/Lead_Interest_Track__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>