Perkin-UAT/force-app/main/default/objects/Lead_Interest_Track__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Interest Track</relationshipLabel>
    <relationshipName>Lead_Interest_Track</relationshipName>
    <type>Lookup</type>
</CustomField>