Perkin-UAT/force-app/main/default/objects/Lead_Interest_Track__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <length>40</length>
    <type>Text</type>
</CustomField>