Perkin-UAT/force-app/main/default/objects/Lead_Interest_Track__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Old Value</label>
    <length>40</length>
    <type>Text</type>
</CustomField>